implemented registration and login user functionality

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 MONGO_CONNECTION_STRING=mongodb+srv://vedantdeokar:Reset@booking-app.2xzyy.mongodb.net/?retryWrites=true&w=majority&appName=booking-app
+
+JWT_SECRET_KEY=ZOvZnZYuFiJQ8iU425d4S62PUjWpotRn
