--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 MONGO_CONNECTION_STRING=mongodb+srv://vedantdeokar:Reset@booking-app.2xzyy.mongodb.net/?retryWrites=true&w=majority&appName=booking-app
 
 JWT_SECRET_KEY=ZOvZnZYuFiJQ8iU425d4S62PUjWpotRn
+
+FRONTEND_URL=http://localhost:5173
