--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "./src/index.ts",
   "scripts": {
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon"
+    "build": "npm install && npx tsc",
+    "start": "node ./dist/index.js"
   },
   "author": "Vedant Deokar",
   "license": "ISC",
