--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "stripe": "^17.5.0"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.5.5",
+    "@types/node-cron": "^3.0.11",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
